--- a/css/home-content.css
+++ b/css/home-content.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url('home-banner.jpg');
+  background-image: url('../images/hero-background.png');
   background-size: cover;
   background-position: center;
   height: 80vh;
@@ -9,6 +9,8 @@
   color: white;
   text-align: center;
   padding: 20px;
+  margin:40px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .hero h1 {
   font-size: 48px;
@@ -21,12 +23,15 @@
 .section {
   padding: 50px;
   text-align: center;
+
 }
 .section img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
   margin-top: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+
 }
 .section h2 {
   font-size: 28px;
@@ -44,4 +49,42 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 300px;
+  img{
+    margin: 20px;
+    max-height: auto;
+    max-width: 80%;
+  }
+}
+
+.section button {
+  width: 20%;
+  padding: 15px;
+  margin-top: 20px;
+  background: #A61414;
+  color: #FFF;
+  border: none;
+  border-radius: 4px;
+  font-family: Inter;
+  font-size: 18px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.section button:hover {
+  background: #FFF;
+  color: #A61414;
+  border: 1px solid #A61414;
+}
+
+.section a {
+  color: #ffffff;
+  text-decoration: none;
+  font-family: Inter;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+.section a:hover {
+  color: #A61414;
+  text-decoration: underline;
 }
